--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
         "target": "esnext",
-        "outFile": "../js/test.js"
+        "outFile": "../js/learning.js"
     },
     "files": [
         "data.ts",
